--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">ArturoConsulting</string>
     <string name="edit_profile">Edit Profile</string>
     <string name="sign_out">Sign Out</string>
+
+    <!--firebase-->
+    <string name="auth_failed">Failed to Authenticate</string>
+    <string name="auth_success">Signed In Succesfully</string>
+
 </resources>
