--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,16 @@
 <resources>
     <string name="app_name">ArturoConsulting</string>
+
+    <!--fragment's names-->
     <string name="edit_profile">Edit Profile</string>
     <string name="sign_out">Sign Out</string>
 
     <!--firebase-->
     <string name="auth_failed">Failed to Authenticate</string>
     <string name="auth_success">Signed In Succesfully</string>
+
+    <!--Firebase database fields-->
+    <string name="dbname_users">users</string>
+    <string name="dbname_user_account_settings">user_account_settings</string>
 
 </resources>
