creating fragments on top of activities in order to reuse the activities more efficiently, created profile fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!--fragment's names-->
     <string name="edit_profile">Edit Profile</string>
     <string name="sign_out">Sign Out</string>
+    <string name="profile_fragment">Profile</string>
 
     <!--firebase-->
     <string name="auth_failed">Failed to Authenticate</string>
